--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: TEST
-subtitle: 'a subtitle'
-description: 'First trail'
-keywords: give it a shot
+title: Leaf in winter
+subtitle: 'Do you see the wind?'
+description: "Batman, if you don't believe it then superman"
+keywords: what?
 author: winter leaf
 language: en
 timezone: ''
@@ -98,3 +98,15 @@ deploy:
   type: git
   repository: https://github.com/winter-leaf/winter-leaf.github.io
   branch: master
+
+
+# ---------------------------------------------------------------
+# Customized Settings
+# some customizations
+# ---------------------------------------------------------------
+# 本地搜索功能 
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
